          to reflect this.
        Rename OpenGuides::SuperSearch to OpenGuides::Search.
        Use corrent content-type (application/rdf+xml) for all RDF output.
        Things with opening hours are marked as geospatial in RDF.
        Fix missing bracket in node.tt.
        Add custom_node template just below main content in node.tt.
        Fix <link> in RSS to point to RecentChanges page, not the feed itself.
        #67 Default website for a page is now http://

0.51    15 November 2005
        Important changes:
          * The preferred way to get RecentChanges is now to pass the CGI the
            parameter "action=rc", rather than just using the page name
            "RecentChanges". However, this method will still work for the time
            being. Similarly, the URL parameter for the RecentChanges RSS feed 
            has changed from "action=rss" to "action=rc;format=rss". Requests 
            for the former will be redirected to the latter.

        New features:
          * When trying to view a non-existent node, you will now be presented
            with a message asking if you want to create that node, rather than
            a blank page.
          * New "summary" metadata field for one-line summaries of nodes:
            - Add summary field to RDF as dc:description.
            - Show node summary in search results.
          * New "format=raw" option for outputting wiki text of a node. 
          * RSS feed now contains DOAP (http://usefulinc.com/doap) metadata.
        
        RDF bugfixes:
          * Locales, address and summary fields now XML-escaped properly.
          * Add "address" field that was missing from the RDF node view.
          * Update URL for Dublin Core elements in RDF index view.
          * Fix URL in the RSS <channel> element to point to the RSS URL,
            not the RecentChanges page URL.
        
        Search bugfixes:
          * Fix bug that was breaking coordinate entry fields on search page if 